<?xml version="1.0"?>
<package format="2">
	<name>dr_ros</name>
	<version>0.1.3</version>
	<description>Delft Robotics ROS utility.</description>
	<license>Apache 2.0</license>
	<maintainer email="info@fizyr.com">Fizyr Team</maintainer>
	<author email="maarten@de-vri.es">Maarten de Vries</author>
	<buildtool_depend>catkin</buildtool_depend>
	<depend>dr_log</depend>
	<depend>dr_param</depend>
	<depend>dr_util</depend>
	<depend>roscpp</depend>
	<depend>roslib</depend>
	<depend>rospack</depend>
	<depend>tf</depend>
	<test_depend>catch2</test_depend>
</package>
